DIGIHUB-160211 Fix TMF639v4 tests for NSP A10NSP
Also quick-fix test data problem for mandatory property itAccountingKey for NSP A10NSP

--- a/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/defaultNetworkServiceProfileA10Nsp.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/defaultNetworkServiceProfileA10Nsp.yml
@@ -4,3 +4,4 @@ values:
   uuid: "" # don't set! Filled automatically
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
+  itAccountingKey: "itAccountingKey-${randomLong, 100000, 999999}"
