--- a/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/networkServiceProfileA10NspPrePro.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/networkServiceProfileA10NspPrePro.yml
@@ -4,3 +4,4 @@ values:
   uuid: "" # don't set! Filled automatically
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
+  itAccountingKey: "itAccountingKey-${randomLong, 100000, 999999}"
