DIGIHUB-145576-HE update tests for rebell-event to inventory-importer

--- a/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementOperatingBor01.yml
@@ -9,5 +9,5 @@ values:
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
   type: "A4-BOR-v1"
-  plannedMatNr: ""
+  plannedMatNr: "40318601"
   planningDeviceName: "dmst.bor.1"
